@@ -1,8 +1,5 @@
 ../builtin_safety2.hex builtin_safety2.out
 ../simple1.hex simple1.out
-../weak1.hex weak1.out -a
-../weak1.hex weak1r.out -ra
-../weak2.hex weak2.out -a
 ../wellfounded1.hex wellfounded1.out --nofacts
 ../wellfounded2.hex wellfounded2.out --nofacts
 ../notwellfounded1.hex notwellfounded1_nofacts.out --nofacts
@@ -10,8 +7,6 @@
 ../notwellfounded2.hex notwellfounded2.out --nofacts
 ../maxint.hex maxint.out
 ../tertop.hex tertop.out
-../namespace1.hex namespace1.out
-../namespace2.hex namespace2.out
 ../agg1.hex agg1.out
 ../agg2.hex agg2.out
 ../msp.hex msp.out -a
